...
 Created by Tami wexelbom on 2/16/16.
 Copyright © 2016 Webit. All rights reserved.
 */
//MARK: - הרשמה
ADDRESS_CITY ="Address: ";
POPUP_FB_GOOGLE = "Clicking OK will delete the data you have entered new replacements";
OK = "Ok";
CANCEL = "Cancel";
YES = "Yes";
NO = "No";
HOURS = "Hours";
MINUTES = "Minutes";
SAVE_BTN = "Save";


CONTINUE = "Continue";
FIRSTNAME_LBL = "Full name";
L_NAME = "Last name";
LOGIN_TITLE = "Login";
FULLNAME_LBL = "First and last name*";
PHONE_LBL = "Phone number";
FULLNAME_LBL = "First and last name*";
...
SYNC_REASON1 = "Bthere allows you to advertise your business";
SYNC_REASON = "Bthere allows you to advertise your business 24 hours a day and keep your customers closer than ever. Syncing your contact list will help you and your customers save valuable time. Each customer can view your calendar in real time and make an appointment with just a click - at your convenience.";

//MARK: - ExistingUserViewController
NAME_USER = "User name";
PASSWORD_USER = "Password";
BTN_CONNECT = "Connect";
EXISTS_USER = "Phone number";
//----
PHONE_USER = "Phone";

//MARK: - //\\PrintCalendarViewController
print_TITLE = "Print Calendar";
...

//MARK: - MyWaitingListViewController
NO_TURNS_INMYLISTWAITING = "there are no lines to your waiting list";

//MARK: - entranceViewController
SEARCH_SERVICE_DOMAIN = "Search for a business or occupation";
LOGIN = "Already a member? Log in";
ADVANTAGED_SEARCH = "Advanced search";
ADVERTISINGS = "news bulletins and passing: new businesses, deals worth ...";

//MARK: - entranceCustomerViewController
NO_RESULTS = "there are no results matching your search";
//validaion
...
LAST_MINUTE_PLUSMENU = "Last minute";
HELP_PLUSMENU = "Help";
BLOCK_HOURS_PLUSMENU_caps = "Block Hours";
START_DATE = "Start date";
END_DATE = "End date";
HHOURS = "Hours";
BTNBLOCK = "Block";
BTNBLOCKsaved = "Blocking hours were saved succesfully";
ERROR_DATE_START_END = "Ending date can not be smaller than Start date";
ERROR_HOUR_START_END = "Ending hour can not be smaller than starting hour";
ERROR_DATE_START_END = "Ending hour can not be smaller than starting hour";
ERROR_HOUR_ISEQUAL = "Ending hour can not be the same as starting hour";
ERROR_date_Start = "Select Start Date";
...
