...
        
        viewPopUp.isHidden = true
        
       // let layout = UICollectionViewFlowLayout()
        // Do any additional setup after loading the view.
        arrImg = ["2People.png","call.png","ix.png","strips.png","eyeIkon.png","ministar.png","garb.png","ipic.png","mat.png","paper.png","graf.png","man.png"]
        arrIconsNames = ["aaa","bbb","ccc","ddd","eee","fff","ggg","hhh","iii","jjj","kkk","lll","mmm","nnn","ooo","ppp"]
        
       // if language == "he"
        //    NSBundle.mainBundle().preferredLocalizations.first
                if  Global.sharedInstance.defaults.integer(forKey: "CHOOSEN_LANGUAGE") == 0
        {
            var scalingTransform : CGAffineTransform!
...
