...
                                        <rect key="frame" x="30" y="98.5" width="315" height="57.5"/>
                                        <constraints>
                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30.5" id="bnf-mt-nBW"/>
                                        </constraints>
                                        <string key="text">Don’t let the businesses 
you love stay behind</string>
                                        <fontDescription key="fontDescription" name="OpenSansHebrew-Bold" family="Open Sans Hebrew" pointSize="21"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jNb-aP-DRM">
                                        <rect key="frame" x="8" y="22" width="38" height="38"/>
                                        <constraints>
...
